--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: elixir
+sudo: required
+dist: trusty
+
+install:
+  - sudo locale-gen zh_TW.UTF-8 en_US.UTF-8
+
 elixir:
   - '1.4'
   - '1.5'
