--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: elixir
 matrix:
   include:
+    - elixir: 1.6
+      otp_release: 21.0
+    - elixir: 1.7
+      otp_release: 22.0
+    - elixir: 1.8
+      otp_release: 22.0
+    - elixir: 1.9
+      otp_release: 22.0
     - elixir: 1.10
       otp_release: 22.0
 
@@ -8,9 +16,8 @@ sudo: required
 dist: trusty
 
 elixir:
-  - '1.4'
-  - '1.5'
-  - '1.10'
+  - 1.4
+  - 1.5
 
 install:
   - sudo locale-gen zh_TW.UTF-8 en_US.UTF-8
